--- a/attendance_app/static/attendance_app/css/modal.css
+++ b/attendance_app/static/attendance_app/css/modal.css
@@ -23,7 +23,6 @@
 
 /* Modal Box */
 .modal-content {
-    width: 420px;
     min-width: 200px;   
     height: 100%;   
     max-height: 700px;
